--- a/index/index.html
+++ b/index/index.html
@@ -45,13 +45,13 @@
 
     <div class="text4">
       <h3>Teknikare check</h3>
-      <p>text</p>
+      <p>Bevisa att du går tekniklinjen :D</p>
       <img src="/images/teknikarequiz.jpg" height="250px" />
     </div>
 
     <div class="text5">
-      <h3>What game is this?</h3>
-      <p>Guess the game!</p>
+      <h3>Are you a gamer?</h3>
+      <p>Are you? Prove it!</p>
       <img src="/images/gamingquiz2.jpg" height="250px" />
     </div>
 
