lagt till knappar så att man återvända till startsidan

--- a/index/cityquiz.html
+++ b/index/cityquiz.html
@@ -76,5 +76,10 @@
       <h2>Du fick <span class="correct-answers">0</span> rätta svar</h2>
       <button type="button" onclick="resetQuiz()">Försök igen</button>
     </div>
+    <nav>
+      <button class="button">
+        <a href="index.html">Return to the home page</a>
+      </button>
+    </nav>
   </body>
 </html>
