--- a/index/index.html
+++ b/index/index.html
@@ -29,6 +29,11 @@
         not.
       </p>
       <img src="/images/flowerquiz.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="flowerquiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
 
     <div class="text3">
@@ -47,18 +52,33 @@
       <h3>Teknikare check</h3>
       <p>Bevisa att du går tekniklinjen :D</p>
       <img src="/images/teknikarequiz.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="teknikarequiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
 
     <div class="text5">
       <h3>Are you a gamer?</h3>
       <p>Are you? Prove it!</p>
       <img src="/images/gamingquiz2.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="gamequiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
 
     <div class="text6">
       <h3>Name all the planets!</h3>
       <p>Do you want to work at NASA?</p>
       <img src="/images/galaxyquiz.jpg" height="250px" />
+      <nav>
+        <button class="button1">
+          <a href="galaxyquiz.html">Play Now</a>
+        </button>
+      </nav>
     </div>
   </body>
 </html>
