--- a/index/galaxyquiz.html
+++ b/index/galaxyquiz.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script src="/js/quiz.js" defer></script>
     <title>Projekt 3</title>
     <link rel="stylesheet" href="/css/stylequiz.css" />
@@ -11,7 +15,7 @@
     <form class="questions">
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/mars.jpg" />
+        <img src="/images/mars.jpg" alt="Picture of Mars" height="250px" />
         <label>
           <input name="question1" type="radio" value="1" checked />Mars
         </label>
@@ -23,7 +27,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/mercury.jpg" />
+        <img
+          src="/images/mercury.jpg"
+          alt="Picture of mercury"
+          height="250px"
+        />
         <label>
           <input name="question2" type="radio" value="0" checked />Neptune
         </label>
@@ -35,7 +43,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/pluto.jpg" />
+        <img src="/images/pluto.jpg" alt="Picture of pluto" height="250px" />
         <label>
           <input name="question3" type="radio" value="1" checked />Pluto
         </label>
@@ -47,7 +55,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/neptune.jpg" />
+        <img
+          src="/images/neptune.jpg"
+          alt="Picture of neptune"
+          height="250px"
+        />
         <label>
           <input name="question4" type="radio" value="0" checked />Saturn
         </label>
@@ -61,7 +73,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/thesun.jpg" />
+        <img src="/images/thesun.jpg" alt="Picture of the sun" height="250px" />
         <label>
           <input name="question5" type="radio" value="0" checked />Neptune
         </label>
@@ -73,7 +85,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/themoon.jpg" />
+        <img
+          src="/images/themoon.jpg"
+          alt="Picture of the moon"
+          height="250px"
+        />
         <label>
           <input name="question6" type="radio" value="0" checked />Jupiter
         </label>
@@ -87,7 +103,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/earth.jpg" />
+        <img src="/images/earth.jpg" alt="Picture of earth" height="250px" />
         <label>
           <input name="question7" type="radio" value="0" checked />The Moon
         </label>
@@ -97,7 +113,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/venus.jpg" />
+        <img src="/images/venus.jpg" alt="Picture of venus" height="250px" />
         <label>
           <input name="question8" type="radio" value="1" checked />Venus
         </label>
@@ -109,7 +125,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/jupiter.jpg" />
+        <img
+          src="/images/jupiter.jpg"
+          alt="Picture of jupiter"
+          height="250px"
+        />
         <label>
           <input name="question9" type="radio" value="0" checked />Saturn
         </label>
@@ -123,7 +143,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/saturn.jpg" />
+        <img src="/images/saturn.jpg" alt="Picture of saturn" height="250px" />
         <label>
           <input name="question10" type="radio" value="0" checked />Uranus
         </label>
@@ -137,7 +157,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/uranus.jpg" />
+        <img src="/images/uranus.jpg" alt="Picture of uranus" height="250px" />
         <label>
           <input name="question11" type="radio" value="0" checked />Saturn
         </label>
@@ -149,11 +169,11 @@
         </label>
         <label> <input name="question11" type="radio" value="0" />Venus </label>
       </div>
-      <button type="button" onclick="submitQuiz()">Rätta!</button>
+      <button type="button" onclick="submitQuiz()">Submit</button>
     </form>
     <div class="result invisible">
-      <h2>Du fick <span class="correct-answers">0</span> rätta svar</h2>
-      <button type="button" onclick="resetQuiz()">Försök igen</button>
+      <h2>You scored <span class="correct-answers">0</span> points</h2>
+      <button type="button" onclick="resetQuiz()">Play again</button>
     </div>
     <nav>
       <button class="button">
