--- a/index/gamequiz.html
+++ b/index/gamequiz.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script src="/js/quiz.js" defer></script>
     <title>Projekt 3</title>
     <link rel="stylesheet" href="/css/stylequiz.css" />
@@ -11,7 +15,11 @@
     <form class="questions">
       <div class="question">
         <p>What is this character called?</p>
-        <img src="/images/tracer.jpg" />
+        <img
+          src="/images/tracer.jpg"
+          alt="Picture of tracer from overwatch"
+          height="250px"
+        />
         <label>
           <input name="question1" type="radio" value="0" checked />D.VA
         </label>
@@ -36,7 +44,7 @@
       </div>
       <div class="question">
         <p>Mario first appeared in what video game?</p>
-        <img src="/images/mario.jpg" />
+        <img src="/images/mario.jpg" alt="Picture of mario" height="250px" />
         <label>
           <input name="question3" type="radio" value="1" checked />Donkey Kong
         </label>
@@ -63,11 +71,11 @@
         </label>
         <label> <input name="question4" type="radio" value="1" />SPARX </label>
       </div>
-      <button type="button" onclick="submitQuiz()">Rätta!</button>
+      <button type="button" onclick="submitQuiz()">Submit!</button>
     </form>
     <div class="result invisible">
-      <h2>Du fick <span class="correct-answers">0</span> rätta svar</h2>
-      <button type="button" onclick="resetQuiz()">Försök igen</button>
+      <h2>You scored <span class="correct-answers">0</span> points</h2>
+      <button type="button" onclick="resetQuiz()">Play again</button>
     </div>
     <nav>
       <button class="button">
