--- a/index/index.html
+++ b/index/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/startsida.css" />
     <title>Projekt 3</title>
   </head>
@@ -16,7 +20,7 @@
       <p>You think you are smart? Answer these questions about bread then.</p>
       <img src="/images/breadquiz.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="breadquiz.html">Play Now</a>
         </button>
       </nav>
@@ -30,7 +34,7 @@
       </p>
       <img src="/images/flowerquiz.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="flowerquiz.html">Play Now</a>
         </button>
       </nav>
@@ -38,11 +42,13 @@
 
     <div class="text3">
       <h3>Guess the city!</h3>
-      <p>Did you listen in geography class?</p>
+      <p>
+        Did you listen in geography class? What will you score on this quiz?
+      </p>
 
-      <img src="/images/guessthecity.jpg" height="250px" />
+      <img src="/images/globe.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="cityquiz.html">Play Now</a>
         </button>
       </nav>
@@ -53,7 +59,7 @@
       <p>Bevisa att du går tekniklinjen :D</p>
       <img src="/images/teknikarequiz.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="teknikarequiz.html">Play Now</a>
         </button>
       </nav>
@@ -64,7 +70,7 @@
       <p>Are you? Prove it!</p>
       <img src="/images/gamingquiz2.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="gamequiz.html">Play Now</a>
         </button>
       </nav>
@@ -75,7 +81,7 @@
       <p>Do you want to work at NASA?</p>
       <img src="/images/galaxyquiz.jpg" height="250px" />
       <nav>
-        <button class="button1">
+        <button class="button">
           <a href="galaxyquiz.html">Play Now</a>
         </button>
       </nav>
