--- a/index/index.html
+++ b/index/index.html
@@ -32,7 +32,7 @@
         Take this quiz about flowers to decide if you can become a florist or
         not.
       </p>
-      <img src="/images/flowerquiz.jpg" height="250px" />
+      <img src="/images/flowerquiz.jpg" height="250px" width="375.5px" />
       <nav>
         <button class="button">
           <a href="flowerquiz.html">Play Now</a>
@@ -45,8 +45,7 @@
       <p>
         Did you listen in geography class? What will you score on this quiz?
       </p>
-
-      <img src="/images/globe.jpg" height="250px" />
+      <img src="/images/globe.jpg" height="250px" width="392px" />
       <nav>
         <button class="button">
           <a href="cityquiz.html">Play Now</a>
