--- a/index/breadquiz.html
+++ b/index/breadquiz.html
@@ -7,9 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
@@ -19,7 +19,7 @@
           with dried fruit and flavoured with tea?
         </p>
         <img
-          src="/images/barabrith.jpg"
+          src="../images/barabrith.jpg"
           alt="Picture of Bread"
           height="250px"
         />
@@ -39,7 +39,7 @@
       <div class="question">
         <p>What is this bread called?</p>
         <img
-          src="/images/baguette.jpg"
+          src="../images/baguette.jpg"
           alt="Picture of a baguette"
           height="250px"
         />
@@ -59,7 +59,7 @@
       <div class="question">
         <p>Who invented sliced bread?</p>
         <img
-          src="/images/slicedbread.jpg"
+          src="../images/slicedbread.jpg"
           alt="Picture of sliced bread"
           height="250px"
         />
@@ -80,7 +80,11 @@
       </div>
       <div class="question">
         <p>What ring-shaped, individual bread is first boiled, then baked?</p>
-        <img src="/images/bagel.jpg" alt="Picture of a bagel" height="250px" />
+        <img
+          src="../images/bagel.jpg"
+          alt="Picture of a bagel"
+          height="250px"
+        />
 
         <label>
           <input name="question4" type="radio" value="0" checked />Pumpkin bread
@@ -96,7 +100,7 @@
       <div class="question">
         <p>What is this bread called?</p>
         <img
-          src="/images/pitabread.jpg"
+          src="../images/pitabread.jpg"
           alt="Picture of pitabread"
           height="250px"
         />
