--- a/index/cityquiz.html
+++ b/index/cityquiz.html
@@ -7,15 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
       <div class="question">
         <p>Name this city!</p>
-        <img src="/images/paris.jpg" alt="Picture of Paris" height="250px" />
+        <img src="../images/paris.jpg" alt="Picture of Paris" height="250px" />
         <label>
           <input name="question1" type="radio" value="0" checked />Moskva
         </label>
@@ -29,7 +29,11 @@
       </div>
       <div class="question">
         <p>Name this city!</p>
-        <img src="/images/madrid.jpg" alt="Picture of Madrid" height="250px" />
+        <img
+          src="../images/madrid.jpg"
+          alt="Picture of Madrid"
+          height="250px"
+        />
         <label>
           <input name="question2" type="radio" value="0" checked />London
         </label>
@@ -39,7 +43,11 @@
       </div>
       <div class="question">
         <p>Name this city!</p>
-        <img src="/images/london.jpg" alt="Picture of London" height="250px" />
+        <img
+          src="../images/london.jpg"
+          alt="Picture of London"
+          height="250px"
+        />
         <label>
           <input name="question3" type="radio" value="0" checked />Oslo
         </label>
@@ -49,7 +57,7 @@
       </div>
       <div class="question">
         <p>Name this city!</p>
-        <img src="/images/tokyo.jpg" alt="Picture of Tokyo" height="250px" />
+        <img src="../images/tokyo.jpg" alt="Picture of Tokyo" height="250px" />
         <label>
           <input name="question4" type="radio" value="0" checked />Wien
         </label>
@@ -61,7 +69,7 @@
       </div>
       <div class="question">
         <p>Name this city!</p>
-        <img src="/images/rome.jpg" alt="Picture of Rome" height="250px" />
+        <img src="../images/rome.jpg" alt="Picture of Rome" height="250px" />
 
         <label>
           <input name="question5" type="radio" value="1" checked />Rome
