--- a/index/flowerquiz.html
+++ b/index/flowerquiz.html
@@ -7,15 +7,19 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
       <div class="question">
         <p>What is this flower called?</p>
-        <img src="/images/tulip.jpg" alt="Picture of a tulip" height="250px" />
+        <img
+          src="../images/tulip.jpg"
+          alt="Picture of a tulip"
+          height="250px"
+        />
         <label>
           <input name="question1" type="radio" value="0" checked />Rose
         </label>
@@ -26,7 +30,7 @@
       <div class="question">
         <p>What is this flower called?</p>
         <img
-          src="/images/poppy.jpg"
+          src="../images/poppy.jpg"
           alt="Picture of a poppy flower"
           height="250px"
         />
@@ -46,7 +50,7 @@
       <div class="question">
         <p>What is this flower called?</p>
         <img
-          src="/images/sunflower.jpg"
+          src="../images/sunflower.jpg"
           alt="Picture of a sunflower"
           height="250px"
         />
@@ -62,7 +66,7 @@
       <div class="question">
         <p>What is this flower called?</p>
         <img
-          src="/images/daisy.jpg"
+          src="../images/daisy.jpg"
           alt="Picture of a daisy flower"
           height="250px"
         />
