--- a/index/galaxyquiz.html
+++ b/index/galaxyquiz.html
@@ -7,15 +7,15 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/mars.jpg" alt="Picture of Mars" height="250px" />
+        <img src="../images/mars.jpg" alt="Picture of Mars" height="250px" />
         <label>
           <input name="question1" type="radio" value="1" checked />Mars
         </label>
@@ -28,7 +28,7 @@
       <div class="question">
         <p>What is this planet called?</p>
         <img
-          src="/images/mercury.jpg"
+          src="../images/mercury.jpg"
           alt="Picture of mercury"
           height="250px"
         />
@@ -43,7 +43,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/pluto.jpg" alt="Picture of pluto" height="250px" />
+        <img src="../images/pluto.jpg" alt="Picture of pluto" height="250px" />
         <label>
           <input name="question3" type="radio" value="1" checked />Pluto
         </label>
@@ -56,7 +56,7 @@
       <div class="question">
         <p>What is this planet called?</p>
         <img
-          src="/images/neptune.jpg"
+          src="../images/neptune.jpg"
           alt="Picture of neptune"
           height="250px"
         />
@@ -73,7 +73,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/thesun.jpg" alt="Picture of the sun" height="250px" />
+        <img
+          src="../images/thesun.jpg"
+          alt="Picture of the sun"
+          height="250px"
+        />
         <label>
           <input name="question5" type="radio" value="0" checked />Neptune
         </label>
@@ -86,7 +90,7 @@
       <div class="question">
         <p>What is this planet called?</p>
         <img
-          src="/images/themoon.jpg"
+          src="../images/themoon.jpg"
           alt="Picture of the moon"
           height="250px"
         />
@@ -103,7 +107,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/earth.jpg" alt="Picture of earth" height="250px" />
+        <img src="../images/earth.jpg" alt="Picture of earth" height="250px" />
         <label>
           <input name="question7" type="radio" value="0" checked />The Moon
         </label>
@@ -113,7 +117,7 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/venus.jpg" alt="Picture of venus" height="250px" />
+        <img src="../images/venus.jpg" alt="Picture of venus" height="250px" />
         <label>
           <input name="question8" type="radio" value="1" checked />Venus
         </label>
@@ -126,7 +130,7 @@
       <div class="question">
         <p>What is this planet called?</p>
         <img
-          src="/images/jupiter.jpg"
+          src="../images/jupiter.jpg"
           alt="Picture of jupiter"
           height="250px"
         />
@@ -143,7 +147,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/saturn.jpg" alt="Picture of saturn" height="250px" />
+        <img
+          src="../images/saturn.jpg"
+          alt="Picture of saturn"
+          height="250px"
+        />
         <label>
           <input name="question10" type="radio" value="0" checked />Uranus
         </label>
@@ -157,7 +165,11 @@
       </div>
       <div class="question">
         <p>What is this planet called?</p>
-        <img src="/images/uranus.jpg" alt="Picture of uranus" height="250px" />
+        <img
+          src="../images/uranus.jpg"
+          alt="Picture of uranus"
+          height="250px"
+        />
         <label>
           <input name="question11" type="radio" value="0" checked />Saturn
         </label>
