--- a/index/gamequiz.html
+++ b/index/gamequiz.html
@@ -7,16 +7,16 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
       <div class="question">
         <p>What is this character called?</p>
         <img
-          src="/images/tracer.jpg"
+          src="../images/tracer.jpg"
           alt="Picture of tracer from overwatch"
           height="250px"
         />
@@ -44,7 +44,7 @@
       </div>
       <div class="question">
         <p>Mario first appeared in what video game?</p>
-        <img src="/images/mario.jpg" alt="Picture of mario" height="250px" />
+        <img src="../images/mario.jpg" alt="Picture of mario" height="250px" />
         <label>
           <input name="question3" type="radio" value="1" checked />Donkey Kong
         </label>
