--- a/index/teknikarequiz.html
+++ b/index/teknikarequiz.html
@@ -7,9 +7,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/quiz.js" defer></script>
+    <script src="../js/quiz.js" defer></script>
     <title>Projekt 3</title>
-    <link rel="stylesheet" href="/css/stylequiz.css" />
+    <link rel="stylesheet" href="../css/stylequiz.css" />
   </head>
   <body>
     <form class="questions">
