--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/startsida.css" />
+    <link rel="stylesheet" href="../css/startsida.css" />
     <title>Projekt 3</title>
   </head>
   <body>
@@ -18,7 +18,7 @@
     <div class="text1">
       <h3>Bread Quiz</h3>
       <p>You think you are smart? Answer these questions about bread then.</p>
-      <img src="/images/breadquiz.jpg" height="250px" />
+      <img src="../images/breadquiz.jpg" height="250px" />
       <nav>
         <button class="button">
           <a href="breadquiz.html">Play Now</a>
@@ -32,7 +32,7 @@
         Take this quiz about flowers to decide if you can become a florist or
         not.
       </p>
-      <img src="/images/flowerquiz.jpg" height="250px" width="375.5px" />
+      <img src="../images/flowerquiz.jpg" height="250px" width="375.5px" />
       <nav>
         <button class="button">
           <a href="flowerquiz.html">Play Now</a>
@@ -45,7 +45,7 @@
       <p>
         Did you listen in geography class? What will you score on this quiz?
       </p>
-      <img src="/images/globe.jpg" height="250px" width="392px" />
+      <img src="../images/globe.jpg" height="250px" width="392px" />
       <nav>
         <button class="button">
           <a href="cityquiz.html">Play Now</a>
@@ -56,7 +56,7 @@
     <div class="text4">
       <h3>Teknikare check</h3>
       <p>Bevisa att du går tekniklinjen :D</p>
-      <img src="/images/teknikarequiz.jpg" height="250px" />
+      <img src="../images/teknikarequiz.jpg" height="250px" />
       <nav>
         <button class="button">
           <a href="teknikarequiz.html">Play Now</a>
@@ -67,7 +67,7 @@
     <div class="text5">
       <h3>Are you a gamer?</h3>
       <p>Are you? Prove it!</p>
-      <img src="/images/gamingquiz2.jpg" height="250px" />
+      <img src="../images/gamingquiz2.jpg" height="250px" />
       <nav>
         <button class="button">
           <a href="gamequiz.html">Play Now</a>
@@ -78,7 +78,7 @@
     <div class="text6">
       <h3>Name all the planets!</h3>
       <p>Do you want to work at NASA?</p>
-      <img src="/images/galaxyquiz.jpg" height="250px" />
+      <img src="../images/galaxyquiz.jpg" height="250px" />
       <nav>
         <button class="button">
           <a href="galaxyquiz.html">Play Now</a>
